# sentry-symbolic

./: Cargo.toml
dwarf-stats/: Cargo.toml  brainstorming.md  output.txt  testcases.md
dwarf-stats/benches/: symcache_comparison.rs  symcache_comparison_external.rs
dwarf-stats/src/: dwarf_converter.rs  dwarf_ranges.rs  error.rs  hist.rs  lib.rs  lookups.rs  main.rs  stats.rs
dwarf-stats/src/converter/: breakpad.rs  dwarf.rs  error.rs  lookup.rs  mod.rs  serialize.rs
dwarf-stats/src/format/: error.rs  lookup.rs  mod.rs  raw.rs
dwarf-stats/tests/: breakpad.rs  dwarf.rs  lookup_correctness.rs
dwarf-stats/tests/fixtures/: gen.sh  inlined.debug  inlined.rs  simple.debug  two_inlined.debug
symbolic-debuginfo/src/: object.rs
symbolic-minidump/: build.rs
symbolic-minidump/cpp/: cfi_frame_info.cpp  processor.cpp  symbolic_source_line_resolver.cpp  symbolic_source_line_resolver.h
symbolic-minidump/src/: cfi.rs  processor.rs
symbolic-symcache-new/: Cargo.toml  brainstorming.md  output.txt
symbolic-symcache-new/benches/: symcache_comparison.rs  symcache_comparison_external.rs
symbolic-symcache-new/src/: error.rs  lib.rs  lookups.rs  main.rs
symbolic-symcache-new/src/cache/: lookup.rs  mod.rs  raw.rs
symbolic-symcache-new/src/converter/: breakpad.rs  debug_session.rs  dwarf.rs  mod.rs  object.rs  serialize.rs
symbolic-symcache-new/src/format/: error.rs  lookup.rs  mod.rs  raw.rs
symbolic-symcache-new/tests/: breakpad.rs  dwarf.rs  lookup_correctness.rs
symbolic-symcache/src/: cache.rs  compat.rs  lib.rs
symbolic-symcache/src/new/: compat.rs  mod.rs  (+3 more)
(+7 files in other folders)
