[package]
name = "dwarf-stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.17"
gimli = "0.26.1"
object = "0.27"
memmap = "0.7"
symbolic-debuginfo = { path = "../symbolic-debuginfo" }
symbolic-symcache = { path = "../symbolic-symcache" }
rand = { version = "0.8.3", features = ["small_rng"] }
