[package]
name = "dwarf-stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.17"
gimli = "0.26.1"
object = "0.27"
memmap = "0.7"
symbolic-common = { path = "../symbolic-common" }
symbolic-debuginfo = { path = "../symbolic-debuginfo" }
symbolic-symcache = { path = "../symbolic-symcache" }
rand = { version = "0.8.3", features = ["small_rng"] }
indexmap = "1.7.0"
humansize = "1.1.1"
thiserror = "1.0.30"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "symcache_comparison_external"
harness = false

[lib]
name = "dwarf_stats"
path = "src/lib.rs"


[[bin]]
name = "dwarf-stats"
path = "src/main.rs"
